--- a/INDChicken/Base.lproj/Main.storyboard
+++ b/INDChicken/Base.lproj/Main.storyboard
@@ -119,23 +119,63 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="d33-IJ-jfu">
-                                <rect key="frame" x="0.0" y="54" width="414" height="739"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="78" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="d33-IJ-jfu">
+                                <rect key="frame" x="0.0" y="54" width="390" height="739"/>
+                                <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="86" id="mFG-eg-Leg">
-                                        <rect key="frame" x="0.0" y="44.666666030883789" width="414" height="86"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="scell" rowHeight="78" id="mFG-eg-Leg" customClass="ShopCell" customModule="INDChicken" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="49" width="390" height="78"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mFG-eg-Leg" id="U70-di-7JJ">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="86"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="78"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZXN-Hl-T0i">
-                                                    <rect key="frame" x="20" y="11" width="64" height="64"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZXN-Hl-T0i">
+                                                    <rect key="frame" x="20" y="11" width="55" height="56"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="55" id="tyo-Py-tf6"/>
+                                                    </constraints>
                                                 </imageView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="qwG-4c-Mem">
+                                                    <rect key="frame" x="83" y="11.666666666666668" width="63.666666666666657" height="54.666666666666657"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nfv-o6-3Xk">
+                                                            <rect key="frame" x="0.0" y="0.0" width="63.666666666666664" height="30"/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hgb-mM-0nB">
+                                                            <rect key="frame" x="0.0" y="33" width="43.666666666666664" height="21.666666666666671"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UXs-R1-JiN">
+                                                    <rect key="frame" x="311" y="11" width="59" height="30"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="qwG-4c-Mem" firstAttribute="leading" secondItem="ZXN-Hl-T0i" secondAttribute="trailing" constant="8" symbolic="YES" id="0kY-8Z-dZl"/>
+                                                <constraint firstItem="qwG-4c-Mem" firstAttribute="centerY" secondItem="ZXN-Hl-T0i" secondAttribute="centerY" id="BTT-d6-8md"/>
+                                                <constraint firstItem="ZXN-Hl-T0i" firstAttribute="bottom" secondItem="U70-di-7JJ" secondAttribute="bottomMargin" id="ThR-Kg-Sdt"/>
+                                                <constraint firstItem="ZXN-Hl-T0i" firstAttribute="top" secondItem="UXs-R1-JiN" secondAttribute="top" id="avi-Kd-ymp"/>
+                                                <constraint firstItem="ZXN-Hl-T0i" firstAttribute="top" secondItem="U70-di-7JJ" secondAttribute="topMargin" id="dqf-aP-6HP"/>
+                                                <constraint firstItem="ZXN-Hl-T0i" firstAttribute="leading" secondItem="U70-di-7JJ" secondAttribute="leadingMargin" id="e4u-Rq-udk"/>
+                                                <constraint firstItem="UXs-R1-JiN" firstAttribute="trailing" secondItem="U70-di-7JJ" secondAttribute="trailingMargin" id="vKk-yh-DNz"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="ShopAmount" destination="Hgb-mM-0nB" id="p7G-mf-Y5v"/>
+                                            <outlet property="ShopName" destination="Nfv-o6-3Xk" id="h8N-Ej-Nia"/>
+                                            <outlet property="ShopPhoto" destination="ZXN-Hl-T0i" id="Tlh-Dz-3tZ"/>
+                                            <outlet property="ShopPrice" destination="UXs-R1-JiN" id="VKH-g8-99f"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -157,13 +197,16 @@
                         <viewLayoutGuide key="safeArea" id="w6l-pE-Dcy"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="bottomMargin" secondItem="d33-IJ-jfu" secondAttribute="bottom" constant="-34" id="Eca-aY-ysB"/>
-                            <constraint firstItem="d33-IJ-jfu" firstAttribute="top" secondItem="w6l-pE-Dcy" secondAttribute="top" constant="55" id="Jnv-Oz-d0b"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="d33-IJ-jfu" secondAttribute="bottom" constant="-86" id="Eca-aY-ysB"/>
+                            <constraint firstItem="d33-IJ-jfu" firstAttribute="top" secondItem="w6l-pE-Dcy" secondAttribute="top" constant="54" id="Jnv-Oz-d0b"/>
                             <constraint firstItem="d33-IJ-jfu" firstAttribute="centerX" secondItem="PIv-1F-g0B" secondAttribute="centerX" id="O2g-3d-rsz"/>
                             <constraint firstItem="d33-IJ-jfu" firstAttribute="leading" secondItem="w6l-pE-Dcy" secondAttribute="leading" id="Pyf-nW-H1J"/>
                         </constraints>
                     </view>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="ShopTable" destination="d33-IJ-jfu" id="JKS-se-Q4p"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E5s-x4-fU6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="B2p-CO-nJL" userLabel="Exit" sceneMemberID="exit"/>
